# bookly

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  test.py
migrations/: env.py
migrations/versions/: 17c7c65f1221_add_possword_hash.py  9efb227b7045_add_review_table.py  bffa6f71897d_add_tags_table.py  c7a9c3404b0d_add_roles_to_users.py  c8e300cc1c81_relate_user_to_books.py  cd82f290f33e_add_review_table.py  ce8e59ac8b50_init.py
src/: __init__.py  celery_tasks.py  config.py  mail.py  middleware.py
src/auth/: dependencies.py  models.py  routes.py  schemas.py  service.py  utils.py
src/books/: book_data.py  models.py  routes.py  schemas.py  service.py
src/db/: main.py  models.py  redis.py
src/reviews/: routes.py  schemas.py  service.py
src/tags/: routes.py  service.py
src/tests/: conftest.py  test_auth.py
