[project]
name = "bookly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "bcrypt==3.2.0",
    "fastapi[standard]>=0.115.12",
    "fastapi-mail>=1.4.2",
    "itsdangerous>=2.2.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "redis>=5.2.1",
    "sqlmodel>=0.0.24",
    "celery>=5.5.0",
    "asgiref>=3.8.1",
    "flower>=2.0.1",
    "pytest>=8.3.5",
    "schemathesis>=3.39.14",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]
